--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Logo en la parte superior -->
     <img src="logofeo1.png" alt="Logo" class="logo">
+    
     <div class="container">
-        
-        <span>Hola jefe, mi mujer esta enferma,estoy en el medico con ella</span>
+        <span>Hola jefe</span>
     </div>
 </body>
 </html>
